Closed Bug 660404 Opened 15 years ago Closed 15 years ago

Pages do not get bfcached when navigating to a multipart response

Categories

(Core :: DOM: Navigation, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla7

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

This happens because there are two live requests in the loadgroup during unload in this situation: the multipart response and the part being loaded. This happens most simply when leaving the bugzilla query page by doing a query.
Comment on attachment 535806 [details] [diff] [review] Allow storing the previous page in bfcache even if the new one is a multipart response. r=me, but this needs tests.
Attachment #535806 - Flags: review?(Olli.Pettay) → review+
I'll see what I can do....
Whiteboard: [need review] → [need landing]
Flags: in-testsuite+
Whiteboard: [need landing] → fixed-in-cedar
Target Milestone: --- → mozilla7
Status: NEW → RESOLVED
Closed: 15 years ago
OS: Mac OS X → All
Hardware: x86 → All
Resolution: --- → FIXED
Whiteboard: fixed-in-cedar
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: