Bug 660404.  Allow storing the previous page in bfcache even if the new one is a multipart response.  r=smaug